<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length" />

    <EditText
        android:id="@+id/input_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_length"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:lines="1"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/width" />

    <EditText
        android:id="@+id/input_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_width"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:lines="1"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height" />

    <EditText
        android:id="@+id/input_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_height"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:lines="1"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/result_size"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="200.0" />
</LinearLayout>